Removed deprecated VM option